<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="fill_parent">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tieu_de"
        android:textAlignment="center"
        android:layout_marginTop="30dp"
        android:textSize="30dp"
        android:textColor="#000000"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/noi_dung"
            android:textColor="#000000"
            android:textSize="15dp"
            android:layout_marginLeft="25dp"/>
        <EditText
            android:id="@+id/edtnd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hay_nhap_noi_dung"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/so_tien"
            android:textColor="#000000"
            android:textSize="15dp"
            android:layout_marginLeft="25dp"/>
        <EditText
            android:id="@+id/edtsotien"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hay_nhap_so_tien"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">
        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:text="@string/hinh_thuc"
            android:textSize="15dp"
            android:textColor="#000000"/>
        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <RadioButton
                android:id="@+id/rbthu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/thu"
                android:textSize="15dp"
                android:checked="true"/>
            <RadioButton
                android:id="@+id/rbchi"
                android:textSize="15dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chi" />
        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="200dp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/btnnhaplai"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:text="Nhập lại"
                android:layout_centerHorizontal="true"
                android:background="#00FFFF"/>
            <Button
                android:id="@+id/btnthem"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:text="Thêm"
                android:layout_toLeftOf="@id/btnnhaplai"
                android:background="#00FFFF"
                android:layout_marginRight="20dp"/>
            <Button
                android:id="@+id/btnhienthi"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:text="Hiển thị"
                android:layout_toRightOf="@id/btnnhaplai"
                android:background="#00FFFF"
                android:layout_marginLeft="20dp"/>
        </RelativeLayout>
    </LinearLayout>

</LinearLayout>